--- a/assets/style.css
+++ b/assets/style.css
@@ -1,52 +1,52 @@
-/* Variabes */
+/* Variaveis */
 /* Mixin's */
 body {
-    background: #4b0082;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    height: 100%;
-  }
+  background: #4b0082;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  height: 100%;
+}
   
-  .wrapper {
-    width: 800px;
-    margin: 30px auto;
-    color: #fff;
-    text-align: center;
-  }
+.wrapper {
+  width: 800px;
+  margin: auto auto;
+  color: #fff;
+  text-align: center;
+}
   
-  h1, h2, h3 {
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-size: 2.6em;
-    text-transform: uppercase;
-  }
+h1, h2, h3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 2.6em;
+  text-transform: uppercase;
+}
   
-  #seconds, #tens {
-    font-size: 2em;
-  }
+#seconds, #tens {
+  font-size: 2em;
+}
   
-  button {
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 50px;
-    -khtml-border-radius: 5px;
-    background: #4b0082;
-    color: #fff;
-    border: solid 1px #fff;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 1.2em;
-    padding: 18px 10px;
-    width: 180px;
-    margin: 10px;
-    outline: none;
-  }
-  button:hover {
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-    background: #fff;
-    border: solid 1px #fff;
-    color: #000000;
-  }
-    
-     
+button {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 50px;
+  -khtml-border-radius: 5px;
+  background: #4b0082;
+  color: #fff;
+  border: solid 1px #fff;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  padding: 18px 10px;
+  width: 180px;
+  margin: 10px;
+  outline: none;
+}
+
+button:hover {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  background: #fff;
+  border: solid 1px #fff;
+  color: #000000;
+}
+
